@@ -24,6 +24,7 @@
 
 	#401:  new package: ffmpeg
 	#835:  Package Dataflashboot-1.05 does not compile with buildroot...
+	#1213: Move .config into output directory
 	#1753: lmbench: convert to generic package infrastructure
 	#1771: Fakeroot and the target/generic/device_table.txt create bad...
 	#1807: LZMA 4.32.7, Required header file(s) are missing
